@@ -37,8 +37,8 @@
   <properties>
     <kiji-delegation.version>1.0.0</kiji-delegation.version>
     <kiji-platforms.version>1.0.0</kiji-platforms.version>
-    <kiji-schema.version>1.0.0</kiji-schema.version>
-    <fake-hbase.version>0.0.4</fake-hbase.version>
+    <kiji-schema.version>1.0.2-SNAPSHOT</kiji-schema.version>
+    <fake-hbase.version>0.0.5</fake-hbase.version>
   </properties>
 
   <modules>
